// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomAmount should render correctly 1`] = `
<View
  style={
    [
      {
        "gap": 8,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "height": 32,
      }
    }
  >
    <View
      style={
        [
          {
            "borderColor": "#BAADA7",
            "borderRadius": 9999,
            "borderWidth": 1,
            "height": 32,
            "justifyContent": "center",
            "paddingLeft": 12,
            "paddingRight": 12,
            "position": "absolute",
            "width": 210,
          },
        ]
      }
    >
      <SatsFormat
        sats={50000}
        satsStyle={
          {
            "fontWeight": "bold",
          }
        }
        style={
          {
            "fontSize": 18,
          }
        }
      />
    </View>
    <Input
      keyboardType="number-pad"
      onChange={[Function]}
      onFocus={[Function]}
      style={
        [
          {
            "fontSize": 20,
            "height": 32,
            "opacity": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "width": "100%",
          },
        ]
      }
      value="50000"
    />
  </View>
  <View
    style={
      {
        "height": 32,
      }
    }
  >
    <View
      style={
        [
          {
            "borderColor": "#BAADA7",
            "borderRadius": 9999,
            "borderWidth": 1,
            "height": 32,
            "justifyContent": "center",
            "paddingLeft": 12,
            "paddingRight": 16,
            "position": "absolute",
          },
        ]
      }
    >
      <PriceFormat
        amount={13.3}
        currency="EUR"
        style={
          {
            "color": "#2B1911",
            "fontFamily": "CourierPrime-Regular",
            "fontSize": 18,
          }
        }
      />
    </View>
    <Input
      keyboardType="number-pad"
      onChange={[Function]}
      onFocus={[Function]}
      style={
        [
          {
            "fontSize": 20,
            "height": 32,
            "opacity": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "width": "100%",
          },
        ]
      }
      value="13.3"
    />
  </View>
</View>
`;

exports[`CustomAmount should render correctly with null amount 1`] = `
<View
  style={
    [
      {
        "gap": 8,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "height": 32,
      }
    }
  >
    <View
      style={
        [
          {
            "borderColor": "#BAADA7",
            "borderRadius": 9999,
            "borderWidth": 1,
            "height": 32,
            "justifyContent": "center",
            "paddingLeft": 12,
            "paddingRight": 12,
            "position": "absolute",
            "width": 210,
          },
        ]
      }
    >
      <SatsFormat
        sats={0}
        satsStyle={
          {
            "fontWeight": "bold",
          }
        }
        style={
          {
            "fontSize": 18,
          }
        }
      />
    </View>
    <Input
      keyboardType="number-pad"
      onChange={[Function]}
      onFocus={[Function]}
      style={
        [
          {
            "fontSize": 20,
            "height": 32,
            "opacity": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "width": "100%",
          },
        ]
      }
      value="0"
    />
  </View>
  <View
    style={
      {
        "height": 32,
      }
    }
  >
    <View
      style={
        [
          {
            "borderColor": "#BAADA7",
            "borderRadius": 9999,
            "borderWidth": 1,
            "height": 32,
            "justifyContent": "center",
            "paddingLeft": 12,
            "paddingRight": 16,
            "position": "absolute",
          },
        ]
      }
    >
      <PriceFormat
        amount={13.3}
        currency="EUR"
        style={
          {
            "color": "#2B1911",
            "fontFamily": "CourierPrime-Regular",
            "fontSize": 18,
          }
        }
      />
    </View>
    <Input
      keyboardType="number-pad"
      onChange={[Function]}
      onFocus={[Function]}
      style={
        [
          {
            "fontSize": 20,
            "height": 32,
            "opacity": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "width": "100%",
          },
        ]
      }
      value="13.3"
    />
  </View>
</View>
`;
